# roids

./: Cargo.toml  LICENSE  README.org
docs/: project.org  project.tex
src/: app.rs  main.rs
src/io/: media.rs  mod.rs  serialization.rs
src/models/: annotation.rs  mod.rs  project.rs
src/ui/: canvas.rs  mod.rs  properties.rs  timeline.rs  toolbar.rs
src/util/: geometry.rs  mod.rs
