[package]
name = "roids"
version = "0.1.0"
edition = "2021"
authors = ["Jason Jenkins"]
license = "BSD-3-Clause"
description = "Region Of Interest Designation System - A tool for annotating images"
repository = "https://github.com/yourusername/roids"
keywords = ["computer-vision", "annotation", "roi", "image-processing"]
categories = ["graphics"]

[dependencies]
# GUI framework
eframe = "0.28"      # egui framework for native apps
egui = "0.28"        # Immediate mode GUI library
rfd = "0.14"         # Native file dialogs (rusty file dialogs)

# Image handling
image = "0.25"       # Image loading and manipulation

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
anyhow = "1.0"       # Error handling
log = "0.4"          # Logging facade
env_logger = "0.11"  # Simple logger implementation
